css: align unit to prevent accidental spacing when fontSize is different

--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ body {
 
 .aboutPage > *,
 .settingsPage > * {
-  padding-bottom: 1rem;
+  padding-bottom: 16px;
 }
 
 .navBar {
@@ -113,7 +113,7 @@ main {
 .routeList {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 16px;
 }
 
 .routeList li {
@@ -205,7 +205,7 @@ pre {
 .routeCard {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 16px;
 }
 
 @media screen and (min-width: 800px) {
